--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <title>VEGA LC</title>
+    <style>
+      html,
+        body,
+        #root {
+          margin: 0;
+          padding: 0;
+
+          width: 100%;
+          height: 100%;
+        }
+
+        #root {
+          display: flex;
+        }
+    </style>
   </head>
   <body>
     <noscript>Вам нужен JavaScript для запуска данного приложения.</noscript>
